--- a/LabProject/src/telas/ResultadoExames.form
+++ b/LabProject/src/telas/ResultadoExames.form
@@ -101,6 +101,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Pesquisar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPesquisarResultActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="titlePacienteResult">
           <Properties>
