--- a/LabProject/src/telas/telaAdmin.form
+++ b/LabProject/src/telas/telaAdmin.form
@@ -68,6 +68,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Estoque de Vacinas"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEstoqueVacinasActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="450" y="350" width="180" height="100"/>
